[package]
name = "async-backtrace-caller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-backtrace = "0.2.7"
backtrace = "0.3"
rustc-demangle = "0.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "backtrace"
harness = false
